--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ svg.main-svg {
   padding-bottom: 0rem;
 }
 
-div.css-79elbk.e1fqkh3o10 {
+div.css-79elbk {
   padding-top: 0rem;
   padding-right: 0rem;
   padding-left: 0rem;
@@ -51,4 +51,23 @@ section.main css-uf99v8.egzxvld5 {
   padding-right: 0rem;
   padding-left: 0rem;
   padding-bottom: 0rem;
+}
+
+div.css-j5r0tf.esravye1{
+  color: black;
+}
+
+.css-1svgoqi p{
+  color: black;
+}
+.css-ykwuo3 {
+  gap: 0rem;
+}
+
+.css-z5fcl4{
+  padding: 1rem 1rem 1rem;
+}
+
+footer {
+  visibility: hidden;
 }
