--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+[data-testid="stForm"] {
+  margin: 0rem 10rem;
+}
+
+.stAlert{
+  margin: 0rem 10rem;
+}
+
 .css-18e3th9 {
   padding-top: 0rem;
   padding-bottom: 10rem;
