--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
   margin: 0rem 10rem;
 }
 
-.stAlert{
+[data-testid="stSidebar"] {
+  background-color: #eef0eb;
+}
+
+.stAlert {
   margin: 0rem 10rem;
 }
 
@@ -61,19 +65,26 @@ section.main css-uf99v8.egzxvld5 {
   padding-bottom: 0rem;
 }
 
-div.css-j5r0tf.esravye1{
+div.css-j5r0tf.esravye1 {
   color: black;
 }
 
-.css-1svgoqi p{
+.css-1svgoqi p {
   color: black;
 }
 .css-ykwuo3 {
   gap: 0rem;
 }
 
-.css-z5fcl4{
+.css-z5fcl4 {
   padding: 1rem 1rem 1rem;
+}
+
+#tabs-bui70-tabpanel-0 {
+  padding-top: 0rem;
+  padding-right: 0rem;
+  padding-left: 0rem;
+  padding-bottom: 0rem;
 }
 
 footer {
