--- a/style/style.css
+++ b/style/style.css
@@ -2,8 +2,9 @@
   margin: 0rem 10rem;
 }
 
-[data-testid="stSidebar"] {
-  background-color: #eef0eb;
+div.css-zt5igj.eqr7zpz3 {
+  align-items: center;
+  text-align: center;
 }
 
 .stAlert {
