--- a/style/darkmode.css
+++ b/style/darkmode.css
@@ -3,40 +3,61 @@
 }
 
 /* [data-testid="stSidebar"] {
-  background-color: #eef0eb;
-} */
+    background-color: #eef0eb;
+  } */
 
-.stAlert {
-  margin: 0rem 10rem;
+[data-testid="stAppViewContainer"] {
+  background-color: #282a36;
 }
+
 [data-testid="stHeader"] {
+  background-color: #282a36;
   visibility: hidden;
 }
 
-[data-testid="column"] {
-  border: 2px solid rgb(212, 203, 203);
-  padding: 0rem 0.5rem;
+[data-testid="stSidebar"] {
+  background-color: #44475a;
+  border: 2px solid rgba(212, 203, 203, 0.5);
   box-shadow: 0 0 10px rgba(212, 203, 203, 0.5);
   border-radius: 8px;
-  margin-top: 1rem;
 }
 
-/* span.css-10trblm.eqr7zpz0{
-  background-color:#005FAC ;
-} */
-
-div.css-1629p8f.eqr7zpz1 {
-  background-color: #005fac;
-}
 div.css-zt5igj.eqr7zpz3 {
   color: white;
   align-items: center;
   text-align: center;
 }
 
-a.css-eczf16.eqr7zpz2 {
-  align-items: center;
+[data-baseweb="tab-list"] {
+  background-color: #fff;
 }
+
+.svg-container {
+  background: none;
+}
+
+[data-testid="stText"] {
+  color: white;
+}
+
+[data-testid="stExpander"] {
+  background-color: #fff;
+  color: #282a36;
+}
+.css-81oif8 {
+  color: white;
+}
+
+.css-pkbazv,
+.css-17lntkn,
+.css-nqowgj {
+  color: white;
+}
+
+.stAlert {
+  margin: 0rem 10rem;
+}
+
 .css-18e3th9 {
   padding-top: 0rem;
   padding-bottom: 10rem;
