--- a/style/darkmode.css
+++ b/style/darkmode.css
@@ -22,7 +22,7 @@
   border-radius: 8px;
 }
 
-div.css-zt5igj.eqr7zpz3 {
+div.css-zt5igj {
   color: white;
   align-items: center;
   text-align: center;
