--- a/style/pages_alco_darkmode.css
+++ b/style/pages_alco_darkmode.css
@@ -18,7 +18,7 @@
   border-radius: 8px;
 }
 
-div.css-zt5igj.eqr7zpz3 {
+div.css-zt5igj {
   color: white;
   align-items: center;
   text-align: center;
@@ -59,7 +59,7 @@ div.css-zt5igj.eqr7zpz3 {
 
 [data-testid="column"] {
   border: 2px solid rgb(212, 203, 203);
-  padding: 0.1rem 0.1rem;
+  padding: 0.1rem 0.3rem 0.1rem 0.3rem;
   box-shadow: 0 0 10px rgba(212, 203, 203, 0.5);
   border-radius: 8px;
   margin-top: 1rem;
