--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,14 @@ div.css-zt5igj.eqr7zpz3 {
   text-align: center;
 }
 
+[data-testid="stVerticalBlock"] {
+  padding-top: 0rem;
+  padding-right: 0rem;
+  padding-left: 0rem;
+  padding-bottom: 0rem;
+  margin: 0rem 0rem 0rem 0rem;
+}
+
 .stAlert {
   margin: 0rem 10rem;
 }
