--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@
   margin: 0rem 10rem;
 }
 
+/* [data-testid="stAppViewContainer"] {
+  background-color: #f4f7f5;
+} */
+
 div.css-zt5igj.eqr7zpz3 {
   align-items: center;
   text-align: center;
