--- a/style/style.css
+++ b/style/style.css
@@ -103,3 +103,20 @@ div.css-j5r0tf.esravye1 {
 footer {
   visibility: hidden;
 }
+[data-testid="stSidebar"] {
+  background-color: #2c5a7b;
+  border: 1px solid rgba(212, 203, 203, 0.5);
+  box-shadow: 0 0 5px rgba(212, 203, 203, 0.5);
+  border-radius: 3px;
+}
+.css-pkbazv,
+.css-17lntkn,
+.css-nqowgj {
+  color: white;
+}
+.css-81oif8 {
+  color: white;
+}
+[data-testid="stText"] {
+  color: white;
+}
