--- a/style/style.css
+++ b/style/style.css
@@ -105,8 +105,8 @@ footer {
 }
 [data-testid="stSidebar"] {
   background-color: #2c5a7b;
-  border: 1px solid rgba(212, 203, 203, 0.5);
-  box-shadow: 0 0 5px rgba(212, 203, 203, 0.5);
+  border: 1px solid rgb(248, 229, 229);
+  box-shadow: 0 0 3px rgba(250, 242, 242, 0.767);
   border-radius: 3px;
 }
 .css-pkbazv,
@@ -119,4 +119,17 @@ footer {
 }
 [data-testid="stText"] {
   color: white;
+}
+div.st-di {
+  color: white;
+}
+div.stCheckbox {
+  background-color: #2c5a7b;
+}
+
+.css-1vbkxwb {
+  color: white;
+}
+button[kind="secondary"] {
+  background-color: #9db2bf;
 }
