--- a/style/pages_alco.css
+++ b/style/pages_alco.css
@@ -5,7 +5,17 @@
 /* [data-testid="stSidebar"] {
   background-color: #eef0eb;
 } */
+.css-nprvyh {
+  display: contents;
+}
 
+.css-fblp2m {
+  background-color: #2c5a7b;
+}
+.css-81oif8 {
+  background-color: #005fac;
+  padding-left: 1rem;
+}
 .stAlert {
   margin: 0rem 10rem;
 }
