--- a/style/pages_alco_darkmode.css
+++ b/style/pages_alco_darkmode.css
@@ -17,6 +17,9 @@
   box-shadow: 0 0 3px rgba(212, 203, 203, 0.5);
   border-radius: 3px;
 }
+.css-nprvyh {
+  display: contents;
+}
 
 div.css-zt5igj {
   color: white;
