--- a/style/darkmode.css
+++ b/style/darkmode.css
@@ -128,7 +128,7 @@ div.css-j5r0tf.esravye1 {
 }
 
 .css-z5fcl4 {
-  padding: 1rem 1rem 1rem;
+  padding: 1rem 0.5rem;
 }
 
 #tabs-bui70-tabpanel-0 {
