--- a/style/pages_alco.css
+++ b/style/pages_alco.css
@@ -28,7 +28,7 @@
 } */
 
 div.css-1629p8f.eqr7zpz1 {
-  background-color: #2c5a7b;
+  background-color: #005fac;
 }
 div.css-zt5igj.eqr7zpz3 {
   color: white;
@@ -106,7 +106,7 @@ div.css-j5r0tf.esravye1 {
 }
 
 .css-z5fcl4 {
-  padding: 1rem 1rem 1rem;
+  padding: 1rem 0.5rem;
 }
 
 #tabs-bui70-tabpanel-0 {
@@ -135,18 +135,13 @@ footer {
   color: white;
 }
 [data-testid="stText"] {
-  color: white;
+  color: #005fac;
+}
+.css-y4bq5x {
+  justify-content: center;
 }
 .css-72dow5 {
   background-color: transparent;
-}
-
-[data-testid="column"] {
-  border: 1px solid #2c5a7b;
-  padding: 0.1rem 0.3rem 0.1rem 0.3rem;
-  box-shadow: 0 0 1px #2c5a7b;
-  border-radius: 3px;
-  margin-top: 1rem;
 }
 
 .css-17uug53 {
@@ -155,4 +150,11 @@ footer {
 
 div.st-di {
   color: white;
+}
+.css-12w0qpk {
+  border: 1px solid #2c5a7b;
+  padding: 0.1rem 0.3rem 0.1rem 0.3rem;
+  box-shadow: 0 0 1px #2c5a7b;
+  border-radius: 3px;
+  margin-top: 1rem;
 }
