add self service

--- a/style/darkmode.css
+++ b/style/darkmode.css
@@ -9,6 +9,10 @@
   margin: 0rem 10rem;
 }
 
+.css-wvv94f,
+.css-1xarl3l {
+  color: white;
+}
 /* [data-testid="stSidebar"] {
     background-color: #eef0eb;
   } */
