--- a/style/darkmode.css
+++ b/style/darkmode.css
@@ -4,7 +4,9 @@
   box-shadow: 0 0 3px rgba(212, 203, 203, 0.5);
   border-radius: 3px;
 }
-
+.css-1wivap2 > div {
+  color: white;
+}
 [data-testid="stForm"] {
   margin: 0rem 10rem;
 }
