--- a/style/home.css
+++ b/style/home.css
@@ -1,9 +1,12 @@
 /*logo*/
-.css-1kyxreq,
+
 .css-y4bq5x {
   justify-content: center;
 }
-
+.css-1kyxreq {
+  justify-content: center;
+  margin-top: 3rem;
+}
 .css-z5fcl4 {
   padding: 3rem 1rem 10rem;
 }
@@ -24,4 +27,61 @@
 .css-5rimss {
   display: flex;
   justify-content: center;
+}
+
+.css-ue6h4q {
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+}
+[data-testid="stForm"] {
+  margin: 2rem 10%;
+  background-color: white;
+  border: 0px;
+}
+[data-testid="stVerticalBlock"] {
+  padding-top: 0rem;
+  padding-right: 0rem;
+  padding-left: 0rem;
+  padding-bottom: 0rem;
+  margin: 0rem 0rem 0rem 0rem;
+}
+.css-z5fcl4 {
+  padding-top: 0rem;
+  padding-right: 0rem;
+  padding-left: 0rem;
+  padding-bottom: 0rem;
+}
+header {
+  margin: 0rem 0rem;
+  padding-top: 0rem;
+  padding-right: 0rem;
+  padding-left: 0rem;
+  padding-bottom: 0rem;
+}
+.css-ocqkz7 {
+  background-color: white;
+  border-radius: 10px;
+  margin: 0rem 25%;
+  padding: 0rem 3rem;
+}
+/* button[kind="secondaryFormSubmit"] {
+  background-color: #f2f2f2;
+
+} */
+.css-7ym5gk {
+  background-color: #005fac;
+  color: white;
+}
+/* image login*/
+div[data-testid="column"] {
+  display: flex;
+  align-items: center;
+}
+/* div[data-testid="stVerticalBlock"] {
+  justify-content: center;
+  align-items: center;
+} */
+[data-testid="stAppViewContainer"] {
+  background-color: #f2f2f2;
 }
