--- a/style/pages_alco.css
+++ b/style/pages_alco.css
@@ -158,3 +158,10 @@ div.st-di {
   border-radius: 3px;
   margin-top: 1rem;
 }
+
+header{
+  display: none;
+}
+.element-container.css-1d4fp9k.e1f1d6gn2{
+  display: none;
+}
