--- a/style/pages_alco_darkmode.css
+++ b/style/pages_alco_darkmode.css
@@ -174,3 +174,10 @@ div[data-testid="metric-container"] {
 .css-1wivap2 {
   color: white;
 }
+
+header{
+  display: none;
+}
+.element-container.css-1d4fp9k.e1f1d6gn2{
+  display: none;
+}
