--- a/style/darkmode.css
+++ b/style/darkmode.css
@@ -147,3 +147,9 @@ div.css-j5r0tf.esravye1 {
 footer {
   visibility: hidden;
 }
+header{
+  display: none;
+}
+.element-container.css-1d4fp9k.e1f1d6gn2{
+  display: none;
+}
