--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
 [data-testid="stAppViewContainer"] {
   background-color: #f6f7f8;
 }
+
+[data-testid="stHeader"]{
+  display:none
+}
 .css-18ni7ap {
   visibility: hidden;
 }
@@ -195,4 +199,17 @@ div.stCheckbox {
 }
 button[kind="secondary"] {
   background-color: #28377a;
+}
+.st-emotion-cache-10trblm{
+  text-align: center;
+}
+
+header{
+  display: none;
+}
+.element-container.css-1d4fp9k.e1f1d6gn2{
+  display: none;
+}
+[data-baseweb="select"]{
+  color: grey;
 }
