--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,13 @@
 [data-testid="stAppViewContainer"] {
-  background-color: #f6f7f8;
+  /* background-color: #f6f7f8; */
+  background-color: #fff;
+}
+
+[data-baseweb="select"] {
+  background-color: white;
+}
+[data-testid="baseButton-secondary"]{
+  color: white;
 }
 
 [data-testid="stHeader"]{
